fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -22,5 +22,6 @@
 @media (min-width: 750px) {
   .benefit-container {
     margin: 100px 0;
+    overflow: hidden;
   }
 }
