--- a/src/Benefit.css
+++ b/src/Benefit.css
@@ -7,12 +7,14 @@
   margin: 40px auto;
   flex-wrap: wrap;
   padding: 0 25px;
+  overflow: hidden;
 }
 
 @media (min-width: 750px) {
   .benefit {
     justify-content: space-between;
     margin: 100px auto;
+    overflow: unset;
   }
 }
 
